--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "node": ">=0.12"
   },
   "scripts": {
-    "store": "./bin/store",
+    "sync": "./bin/store",
     "test": "mocha -R test"
   },
   "dependencies": {
@@ -39,18 +39,21 @@
     "co-each": "^0.1.0",
     "co-limiter": "^1.0.3",
     "co-parallel": "^1.0.0",
-    "colors": "^1.3.0",
+    "colors": "^1.3.2",
     "dive": "^0.5.0",
     "gitignore-parser": "^0.0.2",
     "glob": "^7.1.2",
     "iced-runtime": "^1.0.3",
-    "inquirer": "^6.0.0",
+    "inquirer": "^6.1.0",
     "lodash": "^4.17.10",
     "machinepack-fs": "^12.0.1",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.2",
-    "request": "^2.87.0",
+    "request": "^2.88.0",
     "walk": "^2.3.14"
+  },
+  "devDependencies": {
+    "shopify-sync": "^0.0.8"
   }
 }
