--- a/package.json
+++ b/package.json
@@ -1,59 +1,59 @@
 {
-  "name": "shopify-sync",
-  "description": "A shopify theme store synchronizer used in conjunction with the Shopify Strap development environment theme.",
-  "version": "0.0.9",
-  "homepage": "https://github.com/panoply/shopify-sync",
-  "author": {
-    "name": "Nikolas Savvidis",
-    "url": "https://github.com/panoply"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/panoply/shopify-sync/shopify-sync.git"
-  },
-  "bugs": {
-    "url": "https://github.com/panoply/shopify-sync/issues"
-  },
-  "license": "ISC",
-  "keywords": [
-    "cli",
-    "command line"
-  ],
-  "preferGlobal": true,
-  "bin": {
-    "store": "./bin/store"
-  },
-  "main": "index.js",
-  "engines": {
-    "node": ">=0.12"
-  },
-  "scripts": {
-    "sync": "./bin/store",
-    "test": "mocha -R test"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "bluebird": "^3.5.1",
-    "chokidar": "^2.0.4",
-    "co": "^4.6.0",
-    "co-each": "^0.1.0",
-    "co-limiter": "^1.0.3",
-    "co-parallel": "^1.0.0",
-    "colors": "^1.3.2",
-    "dive": "^0.5.0",
-    "gitignore-parser": "^0.0.2",
-    "glob": "^7.1.2",
-    "iced-runtime": "^1.0.3",
-    "inquirer": "^6.1.0",
-    "lodash": "^4.17.10",
-    "machinepack-fs": "^12.0.1",
-    "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1",
-    "moment": "^2.22.2",
-    "request": "^2.88.0",
-    "walk": "^2.3.14"
-  },
-  "devDependencies": {
-    "shopify-sync": "^0.0.8"
-  }
+    "name": "shopify-sync",
+    "description": "A shopify theme store synchronizer used in conjunction with the Shopify Strap development environment theme.",
+    "version": "0.0.9",
+    "homepage": "https://github.com/panoply/shopify-sync",
+    "author": {
+        "name": "Nikolas Savvidis",
+        "url": "https://github.com/panoply"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/panoply/shopify-sync/shopify-sync.git"
+    },
+    "bugs": {
+        "url": "https://github.com/panoply/shopify-sync/issues"
+    },
+    "license": "ISC",
+    "keywords": [
+        "cli",
+        "command line"
+    ],
+    "preferGlobal": true,
+    "bin": {
+        "store": "./bin/store"
+    },
+    "main": "index.js",
+    "engines": {
+        "node": ">=0.12"
+    },
+    "scripts": {
+        "sync": "./bin/sync",
+        "test": "mocha -R test"
+    },
+    "dependencies": {
+        "axios": "^0.18.0",
+        "bluebird": "^3.5.1",
+        "chokidar": "^2.0.4",
+        "co": "^4.6.0",
+        "co-each": "^0.1.0",
+        "co-limiter": "^1.0.3",
+        "co-parallel": "^1.0.0",
+        "colors": "^1.3.2",
+        "dive": "^0.5.0",
+        "gitignore-parser": "^0.0.2",
+        "glob": "^7.1.2",
+        "iced-runtime": "^1.0.3",
+        "inquirer": "^6.1.0",
+        "lodash": "^4.17.10",
+        "machinepack-fs": "^12.0.1",
+        "minimist": "^1.2.0",
+        "mkdirp": "^0.5.1",
+        "moment": "^2.22.2",
+        "request": "^2.88.0",
+        "walk": "^2.3.14"
+    },
+    "devDependencies": {
+        "shopify-sync": "^0.0.8"
+    }
 }
