--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "shopify-sync",
     "description": "A shopify theme store synchronizer used in conjunction with the Shopify Strap development environment theme.",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "homepage": "https://github.com/panoply/shopify-sync",
     "author": {
         "name": "Nikolas Savvidis",
@@ -21,7 +21,7 @@
     ],
     "preferGlobal": true,
     "bin": {
-        "store": "./bin/sync"
+        "sync": "./bin/sync"
     },
     "main": "index.js",
     "engines": {
