--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "shopify-sync",
-    "description": "A shopify theme store synchronizer used in conjunction with the Shopify Strap development environment theme.",
-    "version": "0.1.3",
+    "description": "A shopify theme synchronizer that watches a directory and uploads changed files to your Shopify theme.",
+    "version": "0.1.4",
     "homepage": "https://github.com/panoply/shopify-sync",
     "author": {
         "name": "Nikolas Savvidis",
