--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "shopify-sync",
     "description": "A shopify theme synchronizer that watches a directory and uploads changed files to your Shopify theme.",
-    "version": "0.1.6",
+    "version": "0.1.7",
     "homepage": "https://github.com/panoply/shopify-sync",
     "author": {
         "name": "Nikolas Savvidis",
@@ -39,17 +39,18 @@
         "co-each": "^0.1.0",
         "co-limiter": "^1.0.3",
         "co-parallel": "^1.0.0",
-        "colors": "^1.3.2",
+        "colors": "^1.3.3",
         "dive": "^0.5.0",
+        "fancy-log": "^1.3.3",
         "gitignore-parser": "^0.0.2",
         "glob": "^7.1.2",
         "iced-runtime": "^1.0.3",
-        "inquirer": "^6.1.0",
+        "inquirer": "^6.2.1",
         "lodash": "^4.17.10",
         "machinepack-fs": "^12.0.1",
         "minimist": "^1.2.0",
         "mkdirp": "^0.5.1",
-        "moment": "^2.22.2",
+        "moment": "^2.23.0",
         "request": "^2.88.0",
         "walk": "^2.3.14"
     },
