--- a/package.json
+++ b/package.json
@@ -1,60 +1,65 @@
 {
-    "name": "shopify-sync",
-    "description": "A shopify theme synchronizer that watches a directory and uploads changed files to your Shopify theme.",
-    "version": "0.1.7",
-    "homepage": "https://github.com/panoply/shopify-sync",
-    "author": {
-        "name": "Nikolas Savvidis",
-        "url": "https://github.com/panoply"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/panoply/shopify-sync/shopify-sync.git"
-    },
-    "bugs": {
-        "url": "https://github.com/panoply/shopify-sync/issues"
-    },
-    "license": "ISC",
-    "keywords": [
-        "cli",
-        "command line"
-    ],
-    "preferGlobal": true,
-    "bin": {
-        "sync": "./bin/sync"
-    },
-    "main": "index.js",
-    "engines": {
-        "node": ">=0.12"
-    },
-    "scripts": {
-        "sync": "./bin/sync",
-        "test": "mocha -R test"
-    },
-    "dependencies": {
-        "axios": "^0.18.0",
-        "bluebird": "^3.5.3",
-        "chokidar": "^2.0.4",
-        "co": "^4.6.0",
-        "co-each": "^0.1.0",
-        "co-limiter": "^1.0.3",
-        "co-parallel": "^1.0.0",
-        "colors": "^1.3.3",
-        "dive": "^0.5.0",
-        "fancy-log": "^1.3.3",
-        "gitignore-parser": "^0.0.2",
-        "glob": "^7.1.2",
-        "iced-runtime": "^1.0.3",
-        "inquirer": "^6.2.1",
-        "lodash": "^4.17.10",
-        "machinepack-fs": "^12.0.1",
-        "minimist": "^1.2.0",
-        "mkdirp": "^0.5.1",
-        "moment": "^2.23.0",
-        "request": "^2.88.0",
-        "walk": "^2.3.14"
-    },
-    "devDependencies": {
-        "shelljs": "^0.8.3"
-    }
+  "name": "shopify-sync",
+  "description": "A shopify theme store synchronizer that watches a directory and uploads changed files.",
+  "version": "0.2.0",
+  "homepage": "https://github.com/panoply/shopify-sync",
+  "author": {
+    "name": "Nikolas Savvidis",
+    "url": "https://github.com/panoply"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/panoply/shopify-sync/shopify-sync.git"
+  },
+  "bugs": {
+    "url": "https://github.com/panoply/shopify-sync/issues"
+  },
+  "license": "ISC",
+  "keywords": [
+    "cli",
+    "command line",
+    "shopify"
+  ],
+  "preferGlobal": true,
+  "bin": {
+    "sync": "./bin/sync"
+  },
+  "main": "index.js",
+  "scripts": {
+    "sync": "./bin/sync",
+    "watch": "node theme/shopify-sync.js"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "bluebird": "^3.5.3",
+    "chokidar": "^2.0.4",
+    "co": "^4.6.0",
+    "co-each": "^0.1.0",
+    "co-limiter": "^1.0.3",
+    "co-parallel": "^1.0.0",
+    "colors": "^1.3.3",
+    "dive": "^0.5.0",
+    "fancy-log": "^1.3.3",
+    "gitignore-parser": "^0.0.2",
+    "glob": "^7.1.2",
+    "iced-runtime": "^1.0.3",
+    "inquirer": "^6.2.1",
+    "lodash": "^4.17.10",
+    "machinepack-fs": "^12.0.1",
+    "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.23.0",
+    "request": "^2.88.0",
+    "walk": "^2.3.14"
+  },
+  "devDependencies": {
+    "chalk": "^2.4.2",
+    "eslint": "^5.12.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "shelljs": "^0.8.3"
+  }
 }
