--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopify-sync",
   "description": "A shopify theme store synchronizer that watches a directory and uploads changed files.",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "homepage": "https://github.com/panoply/shopify-sync",
   "author": {
     "name": "Nikolas Savvidis",
@@ -26,8 +26,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "sync": "./bin/sync",
-    "watch": "node theme/shopify-sync.js"
+    "sync": "./bin/sync"
   },
   "dependencies": {
     "axios": "^0.18.0",
