--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   },
   "main": "index.js",
   "scripts": {
-    "sync": "./bin/sync"
+    "sync": "./bin/sync",
+    "test-watch": "node test/theme-watch.js",
+    "test-download": "node test/theme-download.js",
+    "test-upload": "node test/theme-upload.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -59,6 +62,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "ospec": "^3.0.1",
     "shelljs": "^0.8.3"
   }
 }
