--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopify-sync",
   "description": "A shopify theme store synchronizer that watches a directory and uploads changed files.",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "homepage": "https://github.com/panoply/shopify-sync",
   "author": {
     "name": "Nikolas Savvidis",
@@ -34,6 +34,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bluebird": "^3.5.3",
+    "boxen": "^2.1.0",
+    "chalk": "^2.4.2",
     "chokidar": "^2.0.4",
     "co": "^4.6.0",
     "co-each": "^0.1.0",
@@ -55,7 +57,6 @@
     "walk": "^2.3.14"
   },
   "devDependencies": {
-    "chalk": "^2.4.2",
     "eslint": "^5.12.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
