--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopify-sync",
   "description": "A lightening fast shopify theme store synchronizer that watches a directory and uploads changed files.",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "homepage": "https://github.com/panoply/shopify-sync",
   "author": {
     "name": "Nikolas Savvidis",
@@ -28,6 +28,7 @@
   },
   "main": "index.js",
   "scripts": {
+    "rollup": "rollup -c",
     "sync": "./bin/sync",
     "test-watch": "node test/theme-watch.js",
     "test-download": "node test/theme-download.js",
@@ -41,24 +42,12 @@
     "chalk": "^2.4.2",
     "chokidar": "^3.0.2",
     "co": "^4.6.0",
-    "co-each": "^0.1.0",
-    "co-limiter": "^1.0.3",
-    "co-parallel": "^1.0.0",
-    "colors": "^1.3.3",
-    "dive": "^0.5.0",
     "fancy-log": "^1.3.3",
-    "gitignore-parser": "^0.0.2",
     "glob": "^7.1.4",
-    "iced-runtime": "^1.0.3",
     "inquirer": "^6.5.1",
     "lodash": "^4.17.15",
-    "machinepack-fs": "^12.0.1",
     "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1",
-    "moment": "^2.24.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "walk": "^2.3.14"
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
@@ -69,6 +58,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "ospec": "^4.0.0",
     "rollup": "^1.19.4",
+    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-terser": "^5.1.1",
     "shelljs": "^0.8.3"
   }
 }
