--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopify-sync",
   "description": "A lightening fast shopify theme store synchronizer that watches a directory and uploads changed files.",
-  "version": "0.7.2",
+  "version": "0.7.4",
   "homepage": "https://github.com/panoply/shopify-sync",
   "author": {
     "name": "Nikolas Savvidis",
@@ -29,37 +29,38 @@
   "main": "index.js",
   "scripts": {
     "build": "rollup -c",
+    "dev": "rollup -c -w",
     "sync": "./bin/sync",
     "test-watch": "node test/theme-watch.js",
     "test-download": "node test/theme-download.js",
     "test-upload": "node test/theme-upload.js"
   },
   "dependencies": {
-    "anymatch": "^3.0.3",
+    "anymatch": "^3.1.1",
     "axios": "^0.19.0",
-    "bluebird": "^3.5.5",
-    "boxen": "^4.1.0",
-    "chalk": "^2.4.2",
-    "chokidar": "^3.0.2",
+    "bluebird": "^3.7.2",
+    "boxen": "^4.2.0",
+    "chalk": "^3.0.0",
+    "chokidar": "^3.3.0",
     "co": "^4.6.0",
     "fancy-log": "^1.3.3",
-    "glob": "^7.1.4",
-    "inquirer": "^6.5.1",
+    "glob": "^7.1.6",
+    "inquirer": "^7.0.0",
     "lodash": "^4.17.15",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1"
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
-    "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint": "^6.7.2",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "ospec": "^4.0.0",
-    "rollup": "^1.19.4",
-    "rollup-plugin-commonjs": "^10.0.2",
-    "rollup-plugin-terser": "^5.1.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "ospec": "^4.0.1",
+    "rollup": "^1.27.9",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-terser": "^5.1.2",
     "shelljs": "^0.8.3"
   }
 }
