--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopify-sync",
   "description": "A lightening fast shopify theme store synchronizer that watches a directory and uploads changed files.",
-  "version": "0.7.4",
+  "version": "0.8.0",
   "homepage": "https://github.com/panoply/shopify-sync",
   "author": {
     "name": "Nikolas Savvidis",
@@ -37,30 +37,42 @@
   },
   "dependencies": {
     "anymatch": "^3.1.1",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "bluebird": "^3.7.2",
     "boxen": "^4.2.0",
     "chalk": "^3.0.0",
-    "chokidar": "^3.3.0",
+    "chokidar": "^3.3.1",
     "co": "^4.6.0",
     "fancy-log": "^1.3.3",
     "glob": "^7.1.6",
-    "inquirer": "^7.0.0",
+    "inquirer": "^7.0.4",
     "lodash": "^4.17.15",
     "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^1.0.3"
   },
   "devDependencies": {
-    "eslint": "^6.7.2",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/register": "^7.8.3",
+    "@babel/runtime": "^7.8.4",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-lodash": "^3.3.4",
+    "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "ospec": "^4.0.1",
-    "rollup": "^1.27.9",
+    "rollup": "^1.31.1",
+    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-terser": "^5.2.0",
     "shelljs": "^0.8.3"
   }
 }
