--- a/package.json
+++ b/package.json
@@ -41,40 +41,44 @@
     "bluebird": "^3.7.2",
     "boxen": "^4.2.0",
     "chalk": "^3.0.0",
-    "chokidar": "^3.3.1",
+    "chokidar": "^3.4.0",
     "co": "^4.6.0",
+    "console-clear": "^1.1.1",
     "fancy-log": "^1.3.3",
+    "fs-extra": "^9.0.0",
     "glob": "^7.1.6",
-    "inquirer": "^7.0.4",
+    "inquirer": "^7.1.0",
     "lodash": "^4.17.15",
-    "minimist": "^1.2.0",
-    "mkdirp": "^1.0.3"
+    "log-update": "^4.0.0",
+    "minimist": "^1.2.5",
+    "mkdirp": "^1.0.4",
+    "ora": "^4.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/register": "^7.8.3",
-    "@babel/runtime": "^7.8.4",
-    "babel-eslint": "^10.0.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/register": "^7.9.0",
+    "@babel/runtime": "^7.9.6",
+    "@rollup/plugin-babel": "^5.0.2",
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
+    "eslint-config-standard": "^14.1.1",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "ospec": "^4.0.1",
+    "ospec": "^4.1.1",
     "prettier": "^1.19.1",
-    "prettier-eslint": "^9.0.1",
-    "rollup": "^1.31.1",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-terser": "^5.2.0",
-    "shelljs": "^0.8.3"
+    "prettier-eslint": "^9.0.2",
+    "rollup": "^2.10.9",
+    "rollup-plugin-terser": "^6.1.0",
+    "shelljs": "^0.8.4"
   }
 }
