--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,12 @@
       "format": "svg"
     },
     {
+      "icon": "sass",
+      "extensions": ["sass.config.js", "sass.config.cjs"],
+      "filename": true,
+      "format": "svg"
+    },
+    {
       "icon": "liquid",
       "extensions": ["syncify.config.js"],
       "filename": true,
