--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "svgo": "^2.8.0"
   },
   "optionalDependencies": {
-    "node-sass": "^7.0.1"
+    "node-sass": "^7.0.1",
+    "sass": "^1.49.7"
   }
 }
