--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "axios": "^0.25.0",
     "chokidar": "^3.5.3",
     "dotenv": "^14.3.2",
+    "fast-safe-stringify": "^2.1.1",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "html-minifier-terser": "^7.0.0-alpha.1",
