--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,11 +35,11 @@
       "types": ["src/types/index.d.ts"],
       "cli/*": ["src/cli/*"],
       "sync/*": ["src/sync/*"],
+      "shared/*": ["src/shared/*"],
       "config/*": ["src/config/*"],
       "logs/*": ["src/logs/*"],
       "requests/*": ["src/requests/*"],
-      "transform/*": ["src/transform/*"],
-      "utils/*": ["src/utils/*"]
+      "transform/*": ["src/transform/*"]
     }
   }
 }
