--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "html-minifier-terser": "^7.0.0-alpha.1",
+    "marky": "^1.2.2",
     "minimist": "^1.2.5",
     "p-queue": "^7.1.0",
     "prettyjson": "^1.2.5",
