--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "anymatch": "^3.1.2",
     "axios": "^0.25.0",
     "chokidar": "^3.5.3",
+    "cross-spawn": "^7.0.3",
     "dotenv": "^14.3.2",
     "fast-safe-stringify": "^2.1.1",
     "fs-extra": "^10.0.0",
