--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,8 +14,8 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/Thumbs.db": true
-    // "**/node_modules": true
+    "**/Thumbs.db": true,
+    "**/node_modules": true
   },
   "json.schemas": [
     {
