--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@liquify/syncify",
   "description": "A lightening fast build tool for developing Shopify themes.",
   "version": "0.1.0-beta",
-  "homepage": "https://github.com/panoply/shopify-sync",
+  "homepage": "https://github.com/panoply/syncify",
   "author": {
     "name": "Nikolas Savvidis",
     "url": "https://github.com/panoply"
@@ -42,7 +42,8 @@
     "shopify sync"
   ],
   "bin": {
-    "syncify": "./bin/sync"
+    "sync": "./bin/sync.cjs",
+    "syncify": "./bin/sync.cjs"
   },
   "prettier": "@brixtol/prettier-config",
   "eslintConfig": {
@@ -60,23 +61,20 @@
     "test": "ava ./test/transform/minify.js --watch"
   },
   "dependencies": {
-    "ansis": "^1.3.3",
+    "ansis": "^1.3.4",
     "anymatch": "^3.1.2",
     "axios": "^0.25.0",
     "chokidar": "^3.5.3",
     "cross-spawn": "^7.0.3",
-    "dotenv": "^14.3.2",
+    "dotenv": "^16.0.0",
     "fast-safe-stringify": "^2.1.1",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "html-minifier-terser": "^7.0.0-alpha.1",
-    "marky": "^1.2.2",
     "minimist": "^1.2.5",
-    "p-queue": "^7.1.0",
-    "prettyjson": "^1.2.5",
+    "p-queue": "^7.2.0",
     "prompts": "^2.4.2",
-    "rambdax": "^8.0.0",
-    "svgstore": "^3.0.1",
+    "rambdax": "^8.0.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
@@ -84,26 +82,21 @@
     "@brixtol/prettier-config": "^1.2.1",
     "@brixtol/rollup-config": "^1.5.1",
     "ava": "^4.0.1",
-    "esbuild": "^0.14.14",
+    "esbuild": "^0.14.21",
     "eslint": "^8.8.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-promise": "^6.0.0",
-    "postcss": "^8.4.5",
     "prettier": "^2.5.1",
-    "rollup": "^2.66.1",
-    "svg-sprite": "^1.5.3",
-    "svgo": "^2.8.0",
-    "type-fest": "^2.11.0",
+    "rollup": "^2.67.1",
+    "type-fest": "^2.11.2",
     "typescript": "^4.5.5"
   },
-  "peerDependencies": {
-    "postcss": "^8.4.5",
-    "svg-sprite": "^1.5.3",
-    "svgo": "^2.8.0"
-  },
   "optionalDependencies": {
-    "node-sass": "^7.0.1",
-    "sass": "^1.49.7"
+    "browser-sync": "^2.27.7",
+    "postcss": "^8.4.6",
+    "sass": "^1.49.7",
+    "svg-sprite": "^1.5.4",
+    "svgo": "^2.8.0"
   }
 }
