--- a/package.json
+++ b/package.json
@@ -74,8 +74,7 @@
     "minimist": "^1.2.5",
     "p-queue": "^7.2.0",
     "prompts": "^2.4.2",
-    "rambdax": "^8.0.1",
-    "yamljs": "^0.3.0"
+    "rambdax": "^8.0.1"
   },
   "devDependencies": {
     "@brixtol/eslint-config": "^1.2.1",
