--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@liquify/syncify",
+  "name": "@syncify/cli",
   "description": "A lightening fast build tool for developing Shopify themes.",
   "version": "0.1.0-beta",
   "homepage": "https://github.com/panoply/syncify",
@@ -68,52 +68,54 @@
     "@web/config-loader": "^0.1.3",
     "ansis": "^1.3.4",
     "anymatch": "^3.1.2",
-    "axios": "^0.25.0",
+    "axios": "^0.26.0",
     "chokidar": "^3.5.3",
     "clean-stack": "^4.1.0",
     "cross-spawn": "^7.0.3",
     "dotenv": "^16.0.0",
     "fast-safe-stringify": "^2.1.1",
-    "fastq": "^1.13.0",
-    "fs-extra": "^10.0.0",
+    "fs-extra": "^10.0.1",
     "glob": "^7.2.0",
     "gray-matter": "^4.0.3",
-    "highlight.js": "^11.4.0",
     "html-minifier-terser": "^7.0.0-alpha.1",
-    "joplin-turndown-plugin-gfm": "^1.0.12",
-    "linewrap": "^0.2.1",
-    "marked": "^4.0.12",
     "mergerino": "^0.4.0",
+    "mime-types": "^2.1.34",
     "minimist": "^1.2.5",
     "p-queue": "^7.2.0",
     "prompts": "^2.4.2",
     "rambdax": "^8.0.1",
+    "rehype-parse": "^8.0.4",
+    "rehype-remark": "^9.1.2",
+    "rehype-stringify": "^9.0.3",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "remark-stringify": "^10.0.2",
     "strip-ansi": "^7.0.1",
     "tiny-spinner": "^1.1.0",
-    "turndown": "^7.1.1",
-    "turndown-plugin-gfm": "^1.0.2",
+    "unified": "^10.1.1",
     "wrap-ansi": "^8.0.1"
   },
   "devDependencies": {
     "@brixtol/eslint-config": "^1.2.1",
     "@brixtol/prettier-config": "^1.2.1",
     "@brixtol/rollup-config": "^1.5.1",
+    "@types/mime-types": "^2.1.1",
     "@types/minimist": "^1.2.2",
     "ava": "^4.0.1",
-    "esbuild": "^0.14.21",
-    "eslint": "^8.8.0",
+    "esbuild": "^0.14.25",
+    "eslint": "^8.10.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "^2.5.1",
-    "rollup": "^2.67.1",
-    "type-fest": "^2.11.2",
-    "typescript": "^4.5.5"
+    "rollup": "^2.69.1",
+    "type-fest": "^2.12.0",
+    "typescript": "^4.6.2"
   },
   "optionalDependencies": {
     "browser-sync": "^2.27.7",
-    "postcss": "^8.4.6",
-    "sass": "^1.49.7",
+    "postcss": "^8.4.7",
+    "sass": "^1.49.9",
     "svg-sprite": "^1.5.4",
     "svgo": "^2.8.0"
   }
