--- a/package.json
+++ b/package.json
@@ -66,21 +66,21 @@
   },
   "dependencies": {
     "@web/config-loader": "^0.1.3",
-    "ansis": "^1.3.4",
+    "ansis": "^1.3.6",
     "anymatch": "^3.1.2",
-    "axios": "^0.26.0",
+    "axios": "^0.27.2",
     "chokidar": "^3.5.3",
-    "clean-stack": "^4.1.0",
+    "clean-stack": "^4.2.0",
     "cross-spawn": "^7.0.3",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "fast-safe-stringify": "^2.1.1",
-    "fs-extra": "^10.0.1",
-    "glob": "^7.2.0",
+    "fs-extra": "^10.1.0",
+    "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
-    "html-minifier-terser": "^7.0.0-alpha.1",
+    "html-minifier-terser": "7.0.0-beta.0",
     "mergerino": "^0.4.0",
-    "mime-types": "^2.1.34",
-    "minimist": "^1.2.5",
+    "mime-types": "^2.1.35",
+    "minimist": "^1.2.6",
     "p-queue": "^7.2.0",
     "prompts": "^2.4.2",
     "rambdax": "^8.0.1",
@@ -91,31 +91,31 @@
     "remark-rehype": "^10.1.0",
     "remark-stringify": "^10.0.2",
     "strip-ansi": "^7.0.1",
-    "tiny-spinner": "^1.1.0",
-    "unified": "^10.1.1",
+    "tiny-spinner": "^2.0.0",
+    "unified": "^10.1.2",
     "wrap-ansi": "^8.0.1"
   },
   "devDependencies": {
-    "@brixtol/eslint-config": "^1.2.1",
+    "@brixtol/eslint-config": "^1.2.5",
     "@brixtol/prettier-config": "^1.2.1",
-    "@brixtol/rollup-config": "^1.5.1",
+    "@brixtol/rollup-config": "^1.5.5",
     "@types/mime-types": "^2.1.1",
     "@types/minimist": "^1.2.2",
-    "ava": "^4.0.1",
-    "esbuild": "^0.14.25",
-    "eslint": "^8.10.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
+    "ava": "^4.3.0",
+    "esbuild": "^0.14.47",
+    "eslint": "^8.18.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-promise": "^6.0.0",
-    "prettier": "^2.5.1",
-    "rollup": "^2.69.1",
-    "type-fest": "^2.12.0",
-    "typescript": "^4.6.2"
+    "prettier": "^2.7.1",
+    "rollup": "^2.75.7",
+    "type-fest": "^2.14.0",
+    "typescript": "^4.7.4"
   },
   "optionalDependencies": {
-    "browser-sync": "^2.27.7",
-    "postcss": "^8.4.7",
-    "sass": "^1.49.9",
+    "browser-sync": "^2.27.10",
+    "postcss": "^8.4.14",
+    "sass": "^1.53.0",
     "svg-sprite": "^1.5.4",
     "svgo": "^2.8.0"
   }
