--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true
-    //"**/node_modules": true,
+    //**/node_modules": true,
     // "**/node_modules/.syncify": false,
     //"**/example": true
   },
