POC Live Reloading Support

--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
     "chokidar": "^3.5.3",
     "clean-stack": "^4.2.0",
     "cross-spawn": "^7.0.3",
+    "devcert": "^1.2.2",
     "dotenv": "^16.0.1",
     "fast-safe-stringify": "^2.1.1",
+    "finalhandler": "^1.2.0",
     "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
@@ -78,16 +80,20 @@
     "node-notifier": "^10.0.1",
     "p-queue": "^7.3.0",
     "prompts": "^2.4.2",
+    "pws": "^7.0.0",
     "rambdax": "^8.1.0",
+    "serve-static": "^1.15.0",
     "tiny-spinner": "^2.0.0",
     "turndown": "^7.1.1",
     "turndown-plugin-gfm": "^1.0.2",
-    "wrap-ansi": "^8.0.1"
+    "wrap-ansi": "^8.0.1",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "@brixtol/eslint-config": "^1.2.5",
     "@brixtol/prettier-config": "^1.2.1",
     "@brixtol/rollup-config": "^1.5.5",
+    "@types/livereload": "^0.9.2",
     "@types/mime-types": "^2.1.1",
     "@types/minimist": "^1.2.2",
     "ava": "^4.3.1",
