I am the machine

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,8 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/Thumbs.db": true
+    "**/Thumbs.db": true,
+    "tests": true
     //**/node_modules": true,
     // "**/node_modules/.syncify": false,
     //"**/example": true
