--- a/package.json
+++ b/package.json
@@ -37,32 +37,7 @@
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup --minify",
-    "syncify": "dist/cli.js",
-    "test": "ava ./test/transform/minify.js --watch"
-  },
-  "tsup": {
-    "entry": [
-      "src/cli.ts",
-      "src/api.ts",
-      "src/index.ts"
-    ],
-    "splitting": true,
-    "clean": true,
-    "treeshake": true,
-    "platform": "node",
-    "noExternal": [
-      "@web/config-loader",
-      "ansis",
-      "dotenv",
-      "minimist",
-      "mergerino",
-      "rambdax",
-      "p-queue",
-      "strip-json-comments",
-      "tiny-spinner",
-      "clean-stack",
-      "wrap-ansi"
-    ]
+    "syncify": "dist/cli.js"
   },
   "prettier": "@sissel/prettier-config",
   "eslintConfig": {
@@ -78,7 +53,6 @@
     }
   },
   "dependencies": {
-    "@web/config-loader": "^0.1.3",
     "ansis": "^1.4.0",
     "anymatch": "^3.1.2",
     "axios": "^0.27.2",
@@ -92,7 +66,6 @@
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "html-minifier-terser": "7.0.0-beta.0",
-    "joycon": "^3.1.1",
     "markdown-it": "^13.0.1",
     "mergerino": "^0.4.0",
     "mime-types": "^2.1.35",
@@ -112,18 +85,24 @@
   "devDependencies": {
     "@sissel/eslint-config": "^1.1.0",
     "@sissel/prettier-config": "^1.1.0",
+    "@types/fs-extra": "^9.0.13",
+    "@types/glob": "^7.2.0",
     "@types/livereload": "^0.9.2",
+    "@types/mergerino": "^0.4.0",
     "@types/mime-types": "^2.1.1",
     "@types/minimist": "^1.2.2",
+    "@types/sharp": "^0.30.5",
+    "@types/svg-sprite": "^0.0.33",
+    "@types/svgo": "^2.6.3",
     "ava": "^4.3.1",
-    "eslint": "^8.21.0",
+    "eslint": "^8.22.0",
     "prettier": "^2.7.1",
     "tsup": "^6.2.2",
     "type-fest": "^2.18.0",
     "typescript": "^4.7.4"
   },
   "optionalDependencies": {
-    "esbuild": "^0.15.1",
+    "esbuild": "^0.15.2",
     "postcss": "^8.4.16",
     "sass": "^1.54.4",
     "sharp": "^0.30.7",
