--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "sync": "dist/cli.js"
   },
   "scripts": {
-    "dev": "tsup --watch",
-    "embed": "esbuild src/hot/embed.ts --format=iife --bundle --outfile=hot.txt",
+    "dev": "tsup --watch --onSuccess \"pnpm run hot\"",
+    "hot": "node esbuild.config.cjs",
     "build": "tsup --minify",
     "syncify": "dist/cli.js"
   },
@@ -75,6 +75,7 @@
     "mergerino": "^0.4.0",
     "mime-types": "^2.1.35",
     "minimist": "^1.2.6",
+    "mithril": "^2.2.2",
     "node-notifier": "^10.0.1",
     "p-queue": "^7.3.0",
     "prompts": "^2.4.2",
