--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -28,7 +28,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: pnpm instal
-    - run: pnpm run build --if-present
+    - run: pnpm run build
     - run: pnpx pr-release rollback --verbose --target main --source next --verbose --ignore 'package*' --ignore changelog.md
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
