Revert "Update settings.json"
This reverts commit 8e330eeb46c4e245d76970c73f8beea9875294c1.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
     "*config.js.liquid": "javascript"
   },
   "files.exclude": {
-    "**/.git": false,
+    "**/.git": true,
     "**/.svn": true,
     "**/.hg": true,
     "**/CVS": true,
