begin support for SVG transforms

--- a/package.json
+++ b/package.json
@@ -69,10 +69,10 @@
     "bundle-require": "^3.1.0",
     "chokidar": "^3.5.3",
     "cross-spawn": "^7.0.3",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.2",
+    "fast-glob": "^3.2.11",
     "finalhandler": "^1.2.0",
     "fs-extra": "^10.1.0",
-    "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "html-minifier-terser": "7.0.0",
     "markdown-it": "^13.0.1",
@@ -90,7 +90,6 @@
     "@sissel/prettier-config": "^1.1.0",
     "@types/finalhandler": "^1.1.1",
     "@types/fs-extra": "^9.0.13",
-    "@types/glob": "^7.2.0",
     "@types/mergerino": "^0.4.0",
     "@types/mime-types": "^2.1.1",
     "@types/minimist": "^1.2.2",
@@ -102,7 +101,7 @@
     "ansis": "^1.4.0",
     "ava": "^4.3.3",
     "clean-stack": "^4.2.0",
-    "esbuild": "^0.15.5",
+    "esbuild": "^0.15.6",
     "eslint": "^8.23.0",
     "log-update": "^5.0.1",
     "mergerino": "^0.4.0",
@@ -111,7 +110,7 @@
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "rambdax": "^8.1.0",
-    "sass": "^1.54.5",
+    "sass": "^1.54.8",
     "strip-json-comments": "^5.0.0",
     "svg-sprite": "^1.5.4",
     "svgo": "^2.8.0",
