--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,25 @@ package
 theme
 yarn.lock
 versions
+test/views/sections/cart-items.liquid
+test/views/pages/samples/markdown.txt
+test/views/pages/samples/html.txt
+test/views/pages/markdown.test.mjs
+test/views/pages/frontmatter.test.mjs
+test/units/prompts.test.js
+test/units/plugins.test.js
+test/units/cli.test.js
+test/units/api.test.js
+test/paths/snippets.test.js
+test/paths/sections.test.js
+test/paths/directories.test.js
+test/options/utilities.test.mjs
+test/options/scripts.test.mjs
+test/options/files/utilities.js
+test/options/files/scripts.js
+test/minify/samples/text.txt
+test/minify/liquid.test.mjs
+test/minify/html.test.mjs
+test/logs/warnings.test.js
+test/logs/tui.test.js
+test/logs/spawns.test.js
