--- a/package.json
+++ b/package.json
@@ -65,64 +65,64 @@
   },
   "dependencies": {
     "anymatch": "^3.1.2",
-    "axios": "^0.27.2",
-    "bundle-require": "^3.1.0",
+    "axios": "^1.1.3",
+    "bundle-require": "^3.1.2",
     "chokidar": "^3.5.3",
     "cross-spawn": "^7.0.3",
-    "dotenv": "^16.0.2",
-    "fast-glob": "^3.2.11",
+    "dotenv": "^16.0.3",
+    "fast-glob": "^3.2.12",
     "finalhandler": "^1.2.0",
     "fs-extra": "^10.1.0",
     "gray-matter": "^4.0.3",
     "html-minifier-terser": "7.0.0",
     "markdown-it": "^13.0.1",
     "mime-types": "^2.1.35",
-    "minimist": "^1.2.6",
+    "minimist": "^1.2.7",
     "node-notifier": "^10.0.1",
     "prompts": "^2.4.2",
+    "purgecss": "^5.0.0",
     "serve-static": "^1.15.0",
     "turndown": "^7.1.1",
     "turndown-plugin-gfm": "^1.0.2",
-    "ws": "^8.8.1"
+    "ws": "^8.11.0"
   },
   "devDependencies": {
     "@sissel/eslint-config": "^1.1.0",
     "@sissel/prettier-config": "^1.1.0",
-    "@types/finalhandler": "^1.1.1",
+    "@types/finalhandler": "^1.2.0",
     "@types/fs-extra": "^9.0.13",
     "@types/mergerino": "^0.4.0",
     "@types/mime-types": "^2.1.1",
     "@types/minimist": "^1.2.2",
     "@types/serve-static": "^1.15.0",
-    "@types/sharp": "^0.30.5",
+    "@types/sharp": "^0.31.0",
     "@types/svg-sprite": "^0.0.33",
-    "@types/svgo": "^2.6.4",
     "@types/ws": "^8.5.3",
-    "ansis": "^1.4.0",
-    "ava": "^4.3.3",
-    "clean-stack": "^4.2.0",
-    "esbuild": "^0.15.6",
-    "eslint": "^8.23.0",
+    "ansis": "^1.5.5",
+    "ava": "^5.1.0",
+    "clean-stack": "^5.0.1",
+    "esbuild": "^0.15.13",
+    "eslint": "^8.27.0",
     "log-update": "^5.0.1",
     "mergerino": "^0.4.0",
     "mithril": "^2.2.2",
     "p-queue": "^7.3.0",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "rambdax": "^8.1.0",
-    "sass": "^1.54.8",
+    "sass": "^1.56.1",
     "strip-json-comments": "^5.0.0",
-    "svg-sprite": "^1.5.4",
-    "svgo": "^2.8.0",
+    "svg-sprite": "^2.0.2",
+    "svgo": "^3.0.1",
     "tiny-spinner": "^2.0.0",
-    "tsconfig-type": "^1.26.0",
-    "tsup": "^6.2.3",
-    "type-fest": "^2.19.0",
-    "typescript": "^4.8.2",
+    "tsconfig-type": "^1.27.0",
+    "tsup": "^6.5.0",
+    "type-fest": "^3.2.0",
+    "typescript": "^4.8.4",
     "wrap-ansi": "^8.0.1"
   },
   "optionalDependencies": {
-    "sharp": "^0.30.7"
+    "sharp": "^0.31.2"
   },
   "peerDependencies": {
     "esbuild": "^0.15.5",
