use esbuild context

--- a/package.json
+++ b/package.json
@@ -60,69 +60,69 @@
     ],
     "rules": {
       "object-curly-newline": "off",
-      "no-import-assign": "off"
+      "no-import-assign": "off",
+      "no-new-func": "off"
     }
   },
   "dependencies": {
-    "anymatch": "^3.1.2",
-    "axios": "^1.1.3",
-    "bundle-require": "^3.1.2",
+    "anymatch": "^3.1.3",
+    "axios": "^1.2.3",
     "chokidar": "^3.5.3",
     "cross-spawn": "^7.0.3",
     "dotenv": "^16.0.3",
     "fast-glob": "^3.2.12",
     "finalhandler": "^1.2.0",
-    "fs-extra": "^10.1.0",
+    "fs-extra": "^11.1.0",
     "gray-matter": "^4.0.3",
-    "html-minifier-terser": "7.0.0",
+    "html-minifier-terser": "7.1.0",
+    "load-tsconfig": "^0.2.3",
     "markdown-it": "^13.0.1",
     "mime-types": "^2.1.35",
     "minimist": "^1.2.7",
     "node-notifier": "^10.0.1",
     "prompts": "^2.4.2",
-    "purgecss": "^5.0.0",
     "serve-static": "^1.15.0",
     "turndown": "^7.1.1",
     "turndown-plugin-gfm": "^1.0.2",
-    "ws": "^8.11.0"
+    "ws": "^8.12.0"
   },
   "devDependencies": {
     "@sissel/eslint-config": "^1.1.0",
     "@sissel/prettier-config": "^1.1.0",
     "@types/finalhandler": "^1.2.0",
-    "@types/fs-extra": "^9.0.13",
+    "@types/fs-extra": "^11.0.1",
     "@types/mergerino": "^0.4.0",
     "@types/mime-types": "^2.1.1",
     "@types/minimist": "^1.2.2",
     "@types/serve-static": "^1.15.0",
-    "@types/sharp": "^0.31.0",
-    "@types/svg-sprite": "^0.0.33",
-    "@types/ws": "^8.5.3",
+    "@types/sharp": "^0.31.1",
+    "@types/svg-sprite": "^0.0.34",
+    "@types/ws": "^8.5.4",
     "ansis": "^1.5.5",
-    "ava": "^5.1.0",
-    "clean-stack": "^5.0.1",
-    "esbuild": "^0.15.13",
-    "eslint": "^8.27.0",
+    "ava": "^5.1.1",
+    "clean-stack": "^5.1.0",
+    "esbuild": "^0.17.3",
+    "eslint": "^8.32.0",
     "log-update": "^5.0.1",
     "mergerino": "^0.4.0",
     "mithril": "^2.2.2",
     "p-queue": "^7.3.0",
-    "postcss": "^8.4.19",
-    "prettier": "^2.7.1",
-    "rambdax": "^8.1.0",
-    "sass": "^1.56.1",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "rambdax": "^9.0.0",
+    "sass": "^1.57.1",
     "strip-json-comments": "^5.0.0",
     "svg-sprite": "^2.0.2",
-    "svgo": "^3.0.1",
+    "svgo": "^3.0.2",
     "tiny-spinner": "^2.0.0",
     "tsconfig-type": "^1.27.0",
     "tsup": "^6.5.0",
-    "type-fest": "^3.2.0",
-    "typescript": "^4.8.4",
+    "type-fest": "^3.5.2",
+    "typescript": "^4.9.4",
     "wrap-ansi": "^8.0.1"
   },
   "optionalDependencies": {
-    "sharp": "^0.31.2"
+    "sharp": "^0.31.3"
   },
   "peerDependencies": {
     "esbuild": "^0.15.5",
